Fix: `ExtensionSetup` description don't overlap error
Fixes #2897

--- a/src/modules/dashboard/components/Extensions/ExtensionSetup.css
+++ b/src/modules/dashboard/components/Extensions/ExtensionSetup.css
@@ -77,8 +77,7 @@
 
 .textAreaDescription {
   composes: inputsDescription;
-  margin-top: -15px;
-  margin-left: 4px;
+  margin: -1px -8px 0 0;
 }
 
 .tokenSelectorContainer {
